--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "livefront-challenge",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/icon.jpeg",
     "scheme": "livefrontchallenge",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -28,9 +28,7 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router"
-    ],
+    "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true
     }
