--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.11",
     "expo-web-browser": "~14.2.0",
+    "lodash": "^4.17.21",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.6",
@@ -35,7 +36,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@testing-library/react-native": "^13.3.3",
+    "@types/lodash": "^4.17.20",
     "@types/react": "~19.0.10",
+    "@types/jest": "^30.0.0",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.10",
     "react-test-renderer": "19.0.0",
