--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "livefront-challenge",
     "slug": "livefront-challenge",
     "version": "1.0.0",
-    "orientation": "portrait",
+    "orientation": "default",
     "icon": "./assets/images/icon.jpeg",
     "scheme": "livefrontchallenge",
     "userInterfaceStyle": "automatic",
